# ProjetoContinente

./: CMakeLists.txt  History.txt  README  README.md  checkout.h  checkoutList.h  clients.h  clientsInStore.h  employee.h  eventHorizon.h  funcionariosOriginal.txt  functions.h  genericList.h  main.c  main.exe.stackdump  makefile  produtosOriginal.txt
source/: CONSTANTS.h  checkout.c  checkout.h  checkoutList.c  checkoutList.h  clients.c  clients.h  employee.c  employee.h  eventHorizon.c  eventHorizon.h  functions.c  genericList.c  genericList.h  main.c
